--- a/app/src/main/res/layout/view_content.xml
+++ b/app/src/main/res/layout/view_content.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/progress"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/progress_height"
                 android:indeterminate="false"
                 android:max="100"
                 tools:progress="66" />
