--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="placeholder_icon_size">72dp</dimen>
     <dimen name="content_padding">8dp</dimen>
     <dimen name="progress_height">4dp</dimen>
+    <dimen name="detail_content_top_padding">24dp</dimen>
 </resources>
