--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2018 Halcyon Mobile
   ~ http://www.halcyonmobile.com
   ~ All rights reserved.
@@ -12,4 +13,6 @@
     <dimen name="content_padding">8dp</dimen>
     <dimen name="progress_height">4dp</dimen>
     <dimen name="detail_content_top_padding">24dp</dimen>
+
+    <dimen name="info_padding">24dp</dimen>
 </resources>
