--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 Halcyon Mobile
   ~ http://www.halcyonmobile.com
   ~ All rights reserved.
@@ -43,6 +42,8 @@
         android:layout_gravity="bottom"
         android:background="@android:color/white"
         app:elevation="@dimen/bottom_nav_elevation"
+        app:itemIconTint="@drawable/bg_navigation_item"
+        app:itemTextColor="@drawable/bg_navigation_item"
         app:menu="@menu/navigation" />
 
 </android.support.design.widget.CoordinatorLayout>
