Add crash reporting tool Change agenda to schedule on the main screen

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2018 Halcyon Mobile
-  ~ http://www.halcyonmobile.com
-  ~ All rights reserved.
-  -->
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/agenda"
-        android:icon="@drawable/ic_agenda_24dp"
-        android:title="@string/agenda"
+        android:id="@+id/schedule"
+        android:icon="@drawable/ic_schedule_24dp"
+        android:title="@string/schedule"
         app:showAsAction="ifRoom" />
 
     <item
